[SC-16734] - Fix checkboxes alignment on Different Dialogs

--- a/src/shared/common/styles/dx-customs.less
+++ b/src/shared/common/styles/dx-customs.less
@@ -748,3 +748,8 @@ dx-data-grid.main-component-view, dx-file-manager {
 .dx-editor-cell.dx-editor-inline-block:not(.dx-command-select)::before {
     display: inline;
 }
+
+dx-check-box {
+    display: block!important;
+    width: max-content;
+}
